Update index.html comment

--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,11 @@
 	<link rel="canonical" href="https://www.zeit.de/index">
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link rel="stylesheet" type="text/css" href="styles/base.b49aee54379475d9d75a7c8d1fc99dfd.css">
+	<link rel="stylesheet" href="styles/mapbox-gl-geocoder.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	<!-- For city autocomplete -->
+	<!-- Mapbox-GL and Geocoder for city autocomplete -->
 	<script type="text/javascript" src="scripts/mapbox-gl.js"></script>
 	<script type="text/javascript" src="scripts/gecoder.js"></script>
-	<link rel="stylesheet" href="styles/mapbox-gl-geocoder.css" type="text/css">
 	<script type="text/javascript" src="scripts/index.js"></script>
 </head>
 
